examples/test/testpolicy16069.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16069
  namespace: namespace268
spec:
  podSelector:
    matchLabels:
      key3: value32
      key8: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value0
          key41: value35
      podSelector:
        matchLabels:
          key6: value22
